--- a/board.html
+++ b/board.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/company logo original.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -56,7 +56,7 @@
                             <a href="testimonial.html" class="dropdown-item">TESTIMONIAL</a>
                         </div>
                     </div>
-                    <a href="service.html" class="nav-item nav-link">Service</a>
+                    <a href="./service.html" class="nav-item nav-link">Service</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
                 </div>
